@@ -1,6 +1,6 @@
 #include <stic.h>
 
-#include <sys/stat.h> /* chmod() */
+#include <sys/stat.h> /* chmod() mkfifo() */
 #include <unistd.h> /* rmdir() */
 
 #include <stdio.h> /* FILE fopen() fwrite() fclose() remove() */
@@ -448,6 +448,34 @@ TEST(content_difference_is_detected)
 	remove_dir(SANDBOX_PATH "/a");
 	remove_dir(SANDBOX_PATH "/b");
 }
+
+/* Because of mkfifo() */
+#ifndef _WIN32
+
+TEST(non_regular_files_are_not_read)
+{
+	assert_success(mkfifo(SANDBOX_PATH "/fifo1", 0755));
+	assert_success(mkfifo(SANDBOX_PATH "/fifo2", 0755));
+	create_file(SANDBOX_PATH "/regular");
+
+	strcpy(lwin.curr_dir, SANDBOX_PATH);
+	compare_one_pane(&lwin, CT_CONTENTS, LT_ALL, CF_NONE);
+
+	assert_int_equal(CV_COMPARE, lwin.custom.type);
+	assert_int_equal(3, lwin.list_rows);
+	assert_string_equal("fifo1", lwin.dir_entry[0].name);
+	assert_int_equal(1, lwin.dir_entry[0].id);
+	assert_string_equal("fifo2", lwin.dir_entry[1].name);
+	assert_int_equal(1, lwin.dir_entry[1].id);
+	assert_string_equal("regular", lwin.dir_entry[2].name);
+	assert_int_equal(1, lwin.dir_entry[2].id);
+
+	assert_success(remove(SANDBOX_PATH "/fifo1"));
+	assert_success(remove(SANDBOX_PATH "/fifo2"));
+	assert_success(remove(SANDBOX_PATH "/regular"));
+}
+
+#endif
 
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
 /* vim: set cinoptions+=t0 : */
